Added discussion to prelim submission

--- a/Preliminary_report.ipynb
+++ b/Preliminary_report.ipynb
@@ -118,7 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Solution ##"
+    "## 3. Solution ##  \n",
+    "### Model 1 - Maximize GPA"
    ]
   },
   {
@@ -225,6 +226,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 4.1 Results\n",
+    "\n",
     "The course schedule to maximize GPA is: \n",
     "\n",
     "COMP SCI 252, COMP SCI 300, COMP SCI 354, COMP SCI 400, COMP SCI 407, COMP SCI 506, COMP SCI 547, COMP SCI 558, COMP SCI 577, COMP SCI 579, MATH 234, MATH 461, MATH 221, MATH 222, MATH 240\n",
@@ -255,7 +258,15 @@
     "Bi = Biomedical\n",
     "Is = Information Security\n",
     "\n",
-    "Users of this model will be able to choose one of the above disciplines, and recieve a courseload that maximizes the number of courses belonging to their chosen discipline."
+    "Users of this model will be able to choose one of the above disciplines, and recieve a courseload that maximizes the number of courses belonging to their chosen discipline.  \n",
+    "\n",
+    "### 4.2 Discussion  \n",
+    "\n",
+    "Based on pre-requisites, graduation requirements, and grade distributions, model 1 gives a Computer Sciences student the easiest course load to graduate. With the highest possible GPA in CS courses, the student may find it easier to look for jobs or apply for graduate programs. Avoiding the challenging courses, the student will also face less pressure while studying. \n",
+    "\n",
+    "However, there are some limitations in this model. For example, course credit is not reflected in the GPA calculation as each course is weighted equally, and therefore, the optimal GPA is not precise. However, if course credit is included, the model will turn into a complicated non-linear programming model, which can be hard to solve. Furthermore, the calculated optimal GPA will not lose too much precision since most courses have three or four credits. Therefore, course credit is left out of the model. A major limitation of this model is that some courses in the generated list may not be interesting to every student, which caused us to create model 2, which accounts for student interests.\n",
+    "\n",
+    "In the next steps, we plan to print the course list as a rough schedule so the student can better know how to take theses courses. We will also complete model 2 and compare it with model 1.\n"
    ]
   },
   {
