--- a/Preliminary_report.ipynb
+++ b/Preliminary_report.ipynb
@@ -270,6 +270,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Conclusion ##\n",
+    "We have successfully found the algorithm and solved for minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison, department of computer science. We have concluded that the results for this specific optimization problem is accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model will require more data sets related to aforementioned factors and constraints. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
