Added schedule printing, finished results section

--- a/project_code_peter.ipynb
+++ b/project_code_peter.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
     "Ro = [4, 20, 21, 27, 40, 44, 45, 46, 73]\n",
     "Da = [9, 11, 14, 17, 18, 19, 27, 33, 34, 40, 46, 48, 49, 55, 56, 60, 61, 71, 72, 73]\n",
     "Bi = [34, 36, 40]\n",
-    "Is = [34, 36, 40];"
+    "Is = [9, 12, 32, 40, 41];"
    ]
   },
   {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
       "MATH 221\n",
       "MATH 222\n",
       "MATH 240\n",
-      "[2, 3, 5, 6, 7, 13, 29, 31, 37, 38, 47, 62, 68, 69, 70]\n",
+      "\n",
       "\n",
       "The optimal GPA will be 3.2599699242\n"
      ]
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,9 @@
     "    end\n",
     "end\n",
     "\n",
-    "# Maximize GPA\n",
+    "# Maximize Desired Courseload\n",
+    "# Change Ai to any of the other desired areas of interest\n",
+    "# To find another optimal schedule\n",
     "@objective(m, Max, sum(x[i] for i in Ai));\n",
     "\n",
     "optimize!(m)\n",
@@ -350,12 +352,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print a possible schedule"
+    "### Setup some helper methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if course c is added to schedule s\n",
+    "function isAdded(s,c)\n",
+    "    for i in 1:8\n",
+    "        for j in 1:2\n",
+    "            if (s[i,j] == c)\n",
+    "                return true\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return false\n",
+    "end\n",
+    "\n",
+    "# Check if the prerequisites to course c have been added to schedule s\n",
+    "function preSat(s,c,j,k)\n",
+    "    for i in pre[c]\n",
+    "        if (!isAdded(s,i))\n",
+    "            return false\n",
+    "        end\n",
+    "        if (k == 2 && s[j,1] == i)\n",
+    "            return false\n",
+    "        end\n",
+    "    end\n",
+    "    return true\n",
+    "end\n",
+    ";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print schedule for model 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,34 +455,16 @@
     }
    ],
    "source": [
-    "function isAdded(s,c) # s = schedule, c = course\n",
-    "    for i in 1:8\n",
-    "        for j in 1:2\n",
-    "            if (s[i,j] == c)\n",
-    "                return true\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return false\n",
-    "end\n",
-    "\n",
-    "function preSat(s,c) # Prereqs satisfied?\n",
-    "    for i in pre[c]\n",
-    "        if (!isAdded(s,i))\n",
-    "            return false\n",
-    "        end\n",
-    "    end\n",
-    "    return true\n",
-    "end\n",
-    "\n",
+    "# Set up some variables\n",
     "sched = zeros(Int64,8,2)\n",
     "sched[8,2] = -1\n",
     "j = 1\n",
     "k = 1\n",
     "\n",
+    "# Populate the schedule\n",
     "while (isAdded(sched,0)) \n",
     "    for i in m1_courses\n",
-    "        if (!isAdded(sched,i) && preSat(sched,i))\n",
+    "        if (!isAdded(sched,i) && preSat(sched,i,j,k))\n",
     "            sched[j,k] = i\n",
     "            if (k == 2)\n",
     "                j += 1\n",
@@ -453,6 +477,7 @@
     "    end\n",
     "end\n",
     "\n",
+    "# Print the schedule\n",
     "for i in 1:8\n",
     "    println(\"Starting semester \", i)\n",
     "    println(\"====================\")\n",
@@ -464,6 +489,136 @@
     "    end\n",
     "    println(\"\\n\")\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print a possible schedule for model 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting semester 1\n",
+      "====================\n",
+      "MATH 221\n",
+      "COMP SCI 252\n",
+      "\n",
+      "\n",
+      "Starting semester 2\n",
+      "====================\n",
+      "MATH 222\n",
+      "COMP SCI 300\n",
+      "\n",
+      "\n",
+      "Starting semester 3\n",
+      "====================\n",
+      "COMP SCI 354\n",
+      "COMP SCI 400\n",
+      "\n",
+      "\n",
+      "Starting semester 4\n",
+      "====================\n",
+      "MATH 240\n",
+      "COMP SCI 536\n",
+      "\n",
+      "\n",
+      "Starting semester 5\n",
+      "====================\n",
+      "COMP SCI 412\n",
+      "COMP SCI 520\n",
+      "\n",
+      "\n",
+      "Starting semester 6\n",
+      "====================\n",
+      "COMP SCI 540\n",
+      "COMP SCI 545\n",
+      "\n",
+      "\n",
+      "Starting semester 7\n",
+      "====================\n",
+      "COMP SCI 564\n",
+      "COMP SCI 639\n",
+      "\n",
+      "\n",
+      "Starting semester 8\n",
+      "====================\n",
+      "MATH 340\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up some variables\n",
+    "sched = zeros(Int64,8,2)\n",
+    "sched[8,2] = -1\n",
+    "j = 4\n",
+    "k = 2\n",
+    "iterations = 0\n",
+    "m47 = 0\n",
+    "\n",
+    "# Take the basic_cs and basic_calc courses first\n",
+    "sched[1,1] = basic_math[1]\n",
+    "sched[1,2] = basic_cs[1]\n",
+    "sched[2,1] = basic_math[2]\n",
+    "sched[2,2] = basic_cs[2]\n",
+    "sched[3,1] = basic_cs[3]\n",
+    "sched[3,2] = basic_cs[4]\n",
+    "sched[4,1] = basic_cs[5]\n",
+    "for i in m2_courses\n",
+    "    if (i == 47) # Math 234\n",
+    "        sched[4,2] = 47\n",
+    "        j = 5\n",
+    "        k = 1\n",
+    "    end\n",
+    "end\n",
+    "for i in m2_courses\n",
+    "    if (m47 == 0 && i == 51) # Math 234\n",
+    "        sched[4,2] = 51\n",
+    "        j = 5\n",
+    "        k = 1\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "\n",
+    "# Populate the schedule\n",
+    "while (isAdded(sched,0) && iterations < 10000) \n",
+    "    for i in m2_courses\n",
+    "        if (!isAdded(sched,i) && preSat(sched,i,j,k))\n",
+    "            sched[j,k] = i\n",
+    "            if (k == 2)\n",
+    "                j += 1\n",
+    "                k = 1\n",
+    "            else\n",
+    "                k += 1\n",
+    "            end\n",
+    "            break\n",
+    "        end\n",
+    "        iterations += 1\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Print the schedule\n",
+    "for i in 1:8\n",
+    "    println(\"Starting semester \", i)\n",
+    "    println(\"====================\")\n",
+    "    for j in 1:2\n",
+    "        if (i == 8 && j == 2)\n",
+    "            break\n",
+    "        end\n",
+    "        println(courses[sched[i,j]])\n",
+    "    end\n",
+    "    println(\"\\n\")\n",
+    "end\n"
    ]
   },
   {
@@ -487,16 +642,16 @@
     "\n",
     "| Semester | Course 1 | Course 2 |\n",
     "|-------------|-------------|-----|\n",
-    "| 1 | COMP SCI 300 | MATH 221 |\n",
-    "| 2 | COMP SCI 400 | MATH 222 |\n",
-    "| 3 | COMP SCI 252 | MATH 240 |\n",
-    "| 4 | COMP SCI 354 | MATH 234 |\n",
-    "| 5 | COMP SCI 407 | COMP SCI 547 |\n",
-    "| 6 | COMP SCI 506 | MATH 461 |\n",
-    "| 7 | COMP SCI 558 | COMP SCI 579 |\n",
-    "| 8 | COMP SCI 577 |  |\n",
+    "| 1 | COMP SCI 252 | COMP SCI 300 |\n",
+    "| 2 | COMP SCI 354 | COMP SCI 400 |\n",
+    "| 3 | COMP SCI 407 | COMP SCI 579 |\n",
+    "| 4 | COMP SCI 506 | MATH 221 |\n",
+    "| 5 | MATH 222 | MATH 240 |\n",
+    "| 6 | COMP SCI 577 | MATH 234 |\n",
+    "| 7 | COMP SCI 547 | COMP SCI 558 |\n",
+    "| 8 | MATH 461 |  |\n",
     "\n",
-    "In our final submission, we plan to expand our model to calculate the optimal schedule based on area of interest. Courses will be categorized into the following disciplines:  \n",
+    "In our second model, we calculated the optimal schedule based on a student's chosen area of interest. Courses were categorized into the following disciplines:  \n",
     "\n",
     "Ai = Artificial Intelligence  \n",
     "Ar = Computer Architecture  \n",
@@ -506,10 +661,46 @@
     "Ec = Economics  \n",
     "Ro = Robotics  \n",
     "Da = Data Science  \n",
-    "Bi = Biomedical\n",
+    "Bi = Biomedical  \n",
     "Is = Information Security\n",
     "\n",
-    "Users of this model will be able to choose one of the above disciplines, and recieve a courseload that maximizes the number of courses belonging to their chosen discipline.  \n",
+    "By changing the prefered area of interest in the code block in model 2, the model will find ten different optimal schedules based on the ten different areas of interest. We have chosen three schedules to list here as an example, but to see a different schedule, simply change the chosen array in the objective function in model 2, run the code, and then run the code block titled \"Print a schedule for model 2\". Note that this will give one of many possible schedules. The following schedules are not the only order in which to take the courses.\n",
+    "\n",
+    "#### Artificial Intelligence possible schedule:  \n",
+    "| Semester | Course 1 | Course 2 |\n",
+    "|-------------|-------------|-----|\n",
+    "| 1 | COMP SCI 252 | COMP SCI 300 |\n",
+    "| 2 | COMP SCI 354 | COMP SCI 400 |\n",
+    "| 3 | COMP SCI 536 | COMP SCI 545 |\n",
+    "| 4 | COMP SCI 564 | COMP SCI 639 |\n",
+    "| 5 | MATH 221 | COMP SCI 540 |\n",
+    "| 6 | MATH 222 | MATH 340 |\n",
+    "| 7 | MATH 240 | COMP SCI 412 |\n",
+    "| 8 | COMP SCI 520 |  |  \n",
+    "\n",
+    "#### Data Science possible schedule: \n",
+    "| Semester | Course 1 | Course 2 |\n",
+    "|-------------|-------------|-----|\n",
+    "| 1 | COMP SCI 252 | COMP SCI 300 |\n",
+    "| 2 | COMP SCI 354 | COMP SCI 400 |\n",
+    "| 3 | COMP SCI 407 | COMP SCI 564 |\n",
+    "| 4 | COMP SCI 639 | MATH 221 |\n",
+    "| 5 | COMP SCI 540 | MATH 222 |\n",
+    "| 6 | MATH 340 | MATH 240 |\n",
+    "| 7 | COMP SCI 577 | STAT 324 |\n",
+    "| 8 | COMP SCI 567 |  |  \n",
+    "\n",
+    "#### Computer Systems possible schedule:\n",
+    "| Semester | Course 1 | Course 2 |\n",
+    "|-------------|-------------|-----|\n",
+    "| 1 | COMP SCI 252 | COMP SCI 300 |\n",
+    "| 2 | COMP SCI 352 | COMP SCI 354 |\n",
+    "| 3 | COMP SCI 400 | COMP SCI 552 |\n",
+    "| 4 | COMP SCI 564 | COMP SCI 579 |\n",
+    "| 5 | COMP SCI 639 | MATH 221 |\n",
+    "| 6 | MATH 222 | MATH 240 |\n",
+    "| 7 | COMP SCI 412 | COMP SCI 577 |\n",
+    "| 8 | MATH 319 |  |  \n",
     "\n",
     "### 4.2 Discussion  \n",
     "\n",
