Some edits to the final report

--- a/Final_submission.ipynb
+++ b/Final_submission.ipynb
@@ -15,7 +15,7 @@
     "### Table of Contents\n",
     "\n",
     "1. [Introduction](#1.-Introduction)\n",
-    "2. [Mathematical Model](#2.-Mathematical-model-(model-1))\n",
+    "2. [Mathematical Model](#2.-Mathematical-model)\n",
     "3. [Solution](#3.-Solution)\n",
     "4. [Results and Discussion](#4.-Results-and-Discussion)\n",
     "5. [Conclusion](#5.-Conclusion)"
@@ -787,11 +787,11 @@
     "\n",
     "However, there are some limitations in model 1. For example, course credit is not reflected in the GPA calculation as each course is weighted equally, and therefore, the optimal GPA is not precise. However, if course credit is included, the model will turn into a complicated non-linear programming model, which can be hard to solve. Furthermore, the calculated optimal GPA will not lose too much precision since most courses have three or four credits. Therefore, course credit is left out of the model. A major limitation of this model is that some courses in the generated list may not be interesting to every student, which caused us to create model 2, which accounts for student interests.\n",
     "\n",
-    "Model 2 enables a student to take interested courses as much as possbile, without considering GPA. It is possible that the coureses the student is interested will harm the GPA. However, it is likely that they will boost the GPA instead since the student is interested in them and thus tend to work hard or already knows about course materials. The student can also compare the outputs from both models and make a balance between them.\n",
+    "Model 2 enables a student to take desired courses as much as possbile, without considering GPA. It is possible that the coureses the student is interested in will harm their GPA on average. On the other hand, it is possible that they will do well in those classes, since the student is interested in them and thus may work hard or already know about the course material. The student can also compare the outputs from both models and make a balanced decision between the two.\n",
     "\n",
     "We further refined the output by creating a potential course schedule. The schedule is built upon considerations on semester load and prerequistes. Offered a schedule, a student can have a clearer idea about when to take which course. \n",
     "\n",
-    "Nonetheless, there are some improvements to be made for our models. Deciding which course to take is a complex process and usually a student also takes many other factors into consideration, such as professor rating, course load and offering semester. It is complicated to combine all these important factors into our model since in practical setting, different professors teach at different semesters, and they also give different grade distributions. In future development, these factors can be considered and the tradeoff between different factors can be explored as well."
+    "Nonetheless, there are some improvements to be made for our models. Deciding which course to take is a complex process and usually a student also takes many other factors into consideration, such as professor rating, course load and semester dependent course offerings. It is complicated to combine all these important factors into our model since in practical setting, different professors teach at different semesters, and they also give different grade distributions. In future development, these factors can be considered and the tradeoff between different factors can be explored as well."
    ]
   },
   {
@@ -800,6 +800,46 @@
    "source": [
     "## 5. Conclusion ##\n",
     "We have successfully found the algorithm and solved for minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison, department of computer science. We have concluded that the results for this specific optimization problem is accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model will require more data sets related to aforementioned factors and constraints. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Author Contributions\n",
+    "\n",
+    "Student A = Zhiwen  \n",
+    "Student B = Peter  \n",
+    "Student C = Donald  \n",
+    "\n",
+    "#### 1. Modelling  \n",
+    "Student A: Percentage contribution %  \n",
+    "Student B: Percentage contribution %  \n",
+    "Student C: Percentage contribution %  \n",
+    "\n",
+    "  \n",
+    "#### 2. Analysis  \n",
+    "Student A: Percentage contribution %  \n",
+    "Student B: Percentage contribution %  \n",
+    "Student C: Percentage contribution %  \n",
+    "\n",
+    "\n",
+    "#### 3. Data Gathering  \n",
+    "Student A: Percentage contribution %  \n",
+    "Student B: Percentage contribution %  \n",
+    "Student C: Percentage contribution %  \n",
+    "\n",
+    "\n",
+    "#### 4. Software Implementation  \n",
+    "Student A: Percentage contribution %  \n",
+    "Student B: Percentage contribution %  \n",
+    "Student C: Percentage contribution %  \n",
+    "\n",
+    "\n",
+    "#### 5. Report writing and poster presentation   \n",
+    "Student A: Percentage contribution %  \n",
+    "Student B: Percentage contribution %  \n",
+    "Student C: Percentage contribution %  "
    ]
   },
   {
