--- a/Final_submission.ipynb
+++ b/Final_submission.ipynb
@@ -799,7 +799,11 @@
    "metadata": {},
    "source": [
     "## 5. Conclusion ##\n",
-    "We have successfully found the algorithm and solved for minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison, department of computer science. We have concluded that the results for this specific optimization problem is accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model will require more data sets related to aforementioned factors and constraints. \n"
+    "We have successfully found the algorithm and solved for minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison, department of computer science. We have concluded that the results for this specific optimization problem is accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model would require more data sets related to aforementioned factors and constraints. \n",
+    "\n",
+    "Furthermore, we found an algorithm to create schedules with pre-determined sets of preferred areas of interests. This algorithm is useful for administrators and school advisors to provide students with feed backs and match their interests with preferred course schedule. This type of advising software application is usually missing in many computer science undergraduate programs, and administrators who seek to provide students with online advising could potentially use this algorithm. However, the preferred courses data should be reviewed by faculty board and algorithms more thoroughly tested with corner cases before being implemented in any software applications. It is recognized that many factors are out of the scope of this existing algorithm, and this algorithm could be further improved by increasing constraints and comparing their trade-offs against each other.\n",
+    "\n",
+    "Finally, we also intended for this algorithm to provide educational insights for other administration boards trends towards students' interests and course selections. This algorithm alone is not able to provide the results to analyze trends among students; however, one can gain more insights by gathering data from the students who utilize softwares implemented by this algorithm, such as their satisfaction rate, and if they ended up following the advice from our algorithm."
    ]
   },
   {
@@ -813,33 +817,33 @@
     "Student C = Donald  \n",
     "\n",
     "#### 1. Modelling  \n",
-    "Student A: Percentage contribution %  \n",
-    "Student B: Percentage contribution %  \n",
-    "Student C: Percentage contribution %  \n",
+    "Student A: Percentage contribution 33%  \n",
+    "Student B: Percentage contribution 33%  \n",
+    "Student C: Percentage contribution 33%  \n",
     "\n",
     "  \n",
     "#### 2. Analysis  \n",
-    "Student A: Percentage contribution %  \n",
-    "Student B: Percentage contribution %  \n",
-    "Student C: Percentage contribution %  \n",
+    "Student A: Percentage contribution 33%  \n",
+    "Student B: Percentage contribution 33%  \n",
+    "Student C: Percentage contribution 33%  \n",
     "\n",
     "\n",
     "#### 3. Data Gathering  \n",
-    "Student A: Percentage contribution %  \n",
-    "Student B: Percentage contribution %  \n",
-    "Student C: Percentage contribution %  \n",
+    "Student A: Percentage contribution 33%  \n",
+    "Student B: Percentage contribution 33%  \n",
+    "Student C: Percentage contribution 33%  \n",
     "\n",
     "\n",
     "#### 4. Software Implementation  \n",
-    "Student A: Percentage contribution %  \n",
-    "Student B: Percentage contribution %  \n",
-    "Student C: Percentage contribution %  \n",
+    "Student A: Percentage contribution 33%  \n",
+    "Student B: Percentage contribution 33%  \n",
+    "Student C: Percentage contribution 33%  \n",
     "\n",
     "\n",
     "#### 5. Report writing and poster presentation   \n",
-    "Student A: Percentage contribution %  \n",
-    "Student B: Percentage contribution %  \n",
-    "Student C: Percentage contribution %  "
+    "Student A: Percentage contribution 33%  \n",
+    "Student B: Percentage contribution 33%  \n",
+    "Student C: Percentage contribution 33%  "
    ]
   },
   {
