Some small edits

--- a/Final_submission.ipynb
+++ b/Final_submission.ipynb
@@ -730,6 +730,8 @@
     "\n",
     "COMP SCI 252, COMP SCI 300, COMP SCI 354, COMP SCI 400, COMP SCI 407, COMP SCI 506, COMP SCI 547, COMP SCI 558, COMP SCI 577, COMP SCI 579, MATH 234, MATH 461, MATH 221, MATH 222, MATH 240\n",
     "\n",
+    "With an average GPA of **3.26**\n",
+    "\n",
     "Using the prerequisite dependency relationships, a possibe 8-semester schedule for these courses is:\n",
     "\n",
     "| Semester | Course 1 | Course 2 |\n",
@@ -743,7 +745,7 @@
     "| 7 | COMP SCI 547 | COMP SCI 558 |\n",
     "| 8 | MATH 461 |  |\n",
     "\n",
-    "In our second model, we calculated the optimal schedule based on a student's chosen area of interest. By changing the prefered area of interest in the code block in model 2, the model will find ten different optimal schedules based on the ten different areas of interest. We have chosen three schedules to list here as an example, but to see a different schedule, simply change the chosen array in the objective function in model 2, run the code, and then run the code block titled \"Print a schedule for model 2\". Note that this will give one of many possible schedules. The following schedules are not the only order in which to take the courses.\n",
+    "In our second model, we calculated the optimal schedule based on a student's chosen area of interest. By changing the prefered area of interest in the code block in model 2, the model will find ten different optimal schedules based on the ten different areas of interest. We have chosen three schedules to list here as an example, but to see a different schedule, simply change the chosen array in the objective function in model 2, run the code, and then run the code block titled \"Print a possible schedule for model 2\". Note that this will give one of many possible schedules. The following schedules are not the only order in which to take the courses.\n",
     "\n",
     "#### Artificial Intelligence possible schedule:  \n",
     "| Semester | Course 1 | Course 2 |\n",
@@ -799,11 +801,11 @@
    "metadata": {},
    "source": [
     "## 5. Conclusion ##\n",
-    "We have successfully found the algorithm and solved for minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison, department of computer science. We have concluded that the results for this specific optimization problem is accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model would require more data sets related to aforementioned factors and constraints. \n",
+    "We have successfully found an algorithm and solved for the minimal number of courses with maximal GPA needed to graduate from University of Wisconsin Madison Department of Computer Sciences. We have concluded that the results for this specific optimization problem are accurate. However, there are still limitations on GPA prediction that lead to inaccuracy. Factors including the difficulties of each class, the credit load of each class, the number of students in each class, and standard deviation of total grade points are important in determining an individual GPA for a specific course. In order to take these factors into account, the model would require more data sets related to the aforementioned factors and constraints. \n",
     "\n",
-    "Furthermore, we found an algorithm to create schedules with pre-determined sets of preferred areas of interests. This algorithm is useful for administrators and school advisors to provide students with feed backs and match their interests with preferred course schedule. This type of advising software application is usually missing in many computer science undergraduate programs, and administrators who seek to provide students with online advising could potentially use this algorithm. However, the preferred courses data should be reviewed by faculty board and algorithms more thoroughly tested with corner cases before being implemented in any software applications. It is recognized that many factors are out of the scope of this existing algorithm, and this algorithm could be further improved by increasing constraints and comparing their trade-offs against each other.\n",
+    "Furthermore, we found an algorithm to create schedules with pre-determined sets of preferred areas of interests. This algorithm is useful for administrators and school advisors to provide students with feedback and match their interests with a preferred course schedule. This type of advising software is usually missing in many computer science undergraduate programs, and administrators who seek to provide students with online advising could potentially use this algorithm. However, the preferred courses data should be reviewed by a faculty board and the software should be more thoroughly tested before being implemented in any large-scale applications. It is recognized that many factors are out of the scope of this existing algorithm, and this algorithm could be further improved by increasing constraints and comparing their trade-offs against each other.\n",
     "\n",
-    "Finally, we also intended for this algorithm to provide educational insights for other administration boards trends towards students' interests and course selections. This algorithm alone is not able to provide the results to analyze trends among students; however, one can gain more insights by gathering data from the students who utilize softwares implemented by this algorithm, such as their satisfaction rate, and if they ended up following the advice from our algorithm."
+    "Finally, we also intended for this algorithm to provide insights into trends of students' interests and course selections for administration boards. This algorithm alone is not able to provide the results to analyze trends among students; however, one can gain more insights by gathering data from the students who utilize software implemented by this algorithm, such as their satisfaction rate, and if they ended up following the advice from our algorithm."
    ]
   },
   {
